// These protos are "public" in the sense that they are compiled to TypeScript and
// included in the web app. They are otherwise considered part of the `modal.client` package.
//
// This file should not import other protos, since those will not be included in the
// TypeScript generation.

syntax = "proto3";

package modal.web;

enum AccountEventType {
  ACCOUNT_EVENT_UNSPECIFIED = 0;
  ACCOUNT_EVENT_FUNNEL_STEP = 1;
  ACCOUNT_EVENT_APP_CREATED = 2;
  ACCOUNT_EVENT_APP_STATE = 3;
  ACCOUNT_EVENT_DEPLOYMENT_STATE = 4;
}

message FunnelStepEvent {
  string step_name = 1;
}

message AppCreatedEvent {
  string app_id = 1;
  string app_name = 2;
}

message AppStateEvent {
  string app_id = 1;
}

message DeploymentStateEvent {
  string deployment_name = 1;
}

message AccountEvent {
  double timestamp = 1;
  string entry_id = 2;
  AccountEventType event_type = 3;
  oneof account_event_oneof {
    FunnelStepEvent funnel_step = 4;
    AppCreatedEvent app_created = 5;
    AppStateEvent app_state = 6;
    DeploymentStateEvent deployment_state = 7;
  }
}

enum DeploymentObjectType {
  DEPLOYMENT_OBJECT_TYPE_UNSPECIFIED = 0;
  DEPLOYMENT_OBJECT_TYPE_FUNCTION = 1;
  DEPLOYMENT_OBJECT_TYPE_IMAGE = 2;
  DEPLOYMENT_OBJECT_TYPE_SECRET = 3;
  DEPLOYMENT_OBJECT_TYPE_QUEUE = 4;
  DEPLOYMENT_OBJECT_TYPE_DICT = 5;
  DEPLOYMENT_OBJECT_TYPE_MOUNT = 6;
}

message ScheduleInvocationInfo {
  string call_id = 1;
  double created_at = 2; // when the inputs were enqueued.
}

message ScheduleInfo {
  repeated ScheduleInvocationInfo invocations = 1;
  oneof schedule_oneof {
    float period = 2;
    string cron_string = 3;
  }
}

message FunctionInfo {
  ScheduleInfo schedule = 1;
}

message ObjectInfo {
  string object_id = 1;
  string label = 2;
  DeploymentObjectType object_type = 3;
  oneof object_info_oneof {
    FunctionInfo function = 4;
  }
}

message DeploymentInfo {
  string name = 1;
  double created_at = 2;
  string app_id = 3;
  int32 version = 4;
  repeated ObjectInfo objects = 5;
}
